syntax = "proto3";
package protobuf;

option go_package = ".;pb";
import "google/protobuf/timestamp.proto";

message Torrent {
  uint32 id = 1;
  string title = 2;
  string page_url = 3;
  string file_url = 4;
  string forum = 5;
  string author = 6;
  uint64 size = 7;
  uint64 seeders = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  google.protobuf.Timestamp uploaded_at = 11;

}
